# test-servier

./: .flake8  .pre-commit-config.yaml  README.md  adhoc_traitement.py  dockerfile  main.py  pyproject.toml  supervisord.conf
.github/workflows/: ci.yml
SQL/: Premiere_partie.sql  deuxieme_partie.sql
conf/: config.yaml
dags/: drug_mentions_dag.py
data/: pubmed.json
data_ingestion/: data_ingestion.py
data_output/: data_output.py  drug_graph.json
src/: data_processing.py
