[tool.poetry]
name = "data-pipeline-project"
version = "0.1.0"
description = ""
authors = ["Sami ZOUIRECH <samizouirech@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"
pandas = "^2.1.2"
hydra-core = "^1.3.2"
omegaconf = "^2.3.0"
pre-commit = "^3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
